--- a/apps/point_off_sale/templates/point_off_sale/index.html
+++ b/apps/point_off_sale/templates/point_off_sale/index.html
@@ -54,12 +54,19 @@
               {% with cat_slug=item.group.category.name|slugify %}
               <button 
                 type="button"
-                class="js-menu-add menu-item bg-white rounded-xl border border-gray-200 shadow-sm hover:shadow-md hover:border-pink-300 active:scale-95 transition p-3 text-left flex flex-col justify-between group min-h-[80px] touch-manipulation"
+                class="js-menu-add menu-item relative bg-white rounded-xl border border-gray-200 shadow-sm hover:shadow-md hover:border-pink-300 active:scale-95 transition p-3 text-left flex flex-col justify-between group min-h-[80px] touch-manipulation"
                 data-id="{{ item.id }}"
                 data-name="{{ item.name|escapejs }}"
                 data-price="{{ item.price|floatformat:2 }}"
                 data-category="{{ cat_slug }}"
               >
+                <!-- badge qty kecil di pojok kanan atas -->
+                <span
+                  class="menu-item-badge hidden absolute -top-1 -right-1 min-w-[18px] h-[18px] rounded-full bg-pink-500 text-white text-[10px] leading-[18px] text-center font-semibold shadow-md"
+                >
+                  1
+                </span>
+              
                 <span class="text-sm font-medium text-gray-700 group-hover:text-pink-600 leading-snug line-clamp-2">
                   {{ item.name }}
                 </span>
@@ -137,7 +144,7 @@
               </div>
             </div>
           </template>
-          
+
       
           <!-- Total -->
           <div id="order-total" class="hidden pt-4 border-t border-gray-200 mt-4">
