--- a/apps/point_off_sale/templates/point_off_sale/index.html
+++ b/apps/point_off_sale/templates/point_off_sale/index.html
@@ -9,7 +9,7 @@
   @cart-updated.window="cartCount = $event.detail"
 >
 
-{% include "point_off_sale/snippets/header.html" %}
+{% include "point_off_sale/snippets/header.html" with show_search=True %}
 {% include "point_off_sale/snippets/alert.html" %}
 
   <!-- MAIN CONTENT -->
